<resources>
    <string name="app_name">NutriPlan</string>
    <string name="app_name_subtitle">The Android app for nutritionists</string>
    <string name="build_number" translatable="false">20210104</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_subtitle">Log in using your biometric credential</string>
    <string name="biometric_negative">Use account password</string>
    <string name="biometric_auth_error">Authentication error: %1$s</string>
    <string name="biometric_auth_succeded">Authentication succeeded!</string>
    <string name="biometric_auth_failed">Authentication failed</string>
    <string name="longdash">—</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="of_the">of the</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="hour">Time</string>
    <string name="add">Add</string>
    <string name="dear">Dear %1$s,\n</string>
    <string name="nodata">No data to show</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="edited">Edited</string>
    <string name="edit">Edit</string>
    <string name="export_nutr">Export</string>
    <string name="loading">Loading...</string>
    <string name="loading_complete">Loading complete</string>
    <string name="export_description">Create and save a .nutr file that contains all Nutriplan data.</string>
    <string name="import_nutr">Restore</string>
    <string name="import_description">Select the .nutr file from the tablet to import data. All data currently on the tablet will be overwritten.</string>
    <string name="share_with">Open with...</string>
    <string name="no_whatsapp">Whatsapp not installed</string>
    <string name="hint_cm">(cm)</string>
    <string name="hint_perc">(%)</string>
    <string name="hint_kg">(kg)</string>
    <string name="height">Height (cm)</string>
    <string name="hip_circ">Circumference of the hips (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="sex">Sex</string>
    <string name="born">Date of birth</string>
    <string name="male_short">M</string>
    <string name="female_short">F</string>
    <string name="male_long">Male ♂</string>
    <string name="female_long">Female ♀</string>
    <string name="hypercholesterolaemia">Hypercholesterolaemia</string>
    <string name="thyroidism">Thyroidism</string>
    <string name="diabetes">Diabetes</string>
    <string name="kidneyslaziness">Reduced kidney function</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="prostatitis">Prostatitis</string>
    <string name="title_activity_menu">NutriPlan</string>
    <string name="title_activity_calc">Health indices calculator</string>
    <string name="title_activity_patients">Patients</string>
    <string name="title_activity_addpatient">New patient</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_importexport">Backup/restore</string>
    <string name="title_activity_patientaccount">Patient data</string>
    <string name="title_activity_patient_editnotes">Edit notes</string>
    <string name="title_activity_patientaccount_visit">Patient data - visit</string>
    <string name="title_activity_patientaccount_visit_new">Patient data - new visit</string>
    <string name="activitymenu_string_importing_failed">Restoring failed. Check the validity of the file.</string>
    <string name="activitymenu_string_export_permission">"Storage" permission is required to export data!</string>
    <string name="activitycalc_string_tab_pi">Ideal Weight</string>
    <string name="pi_short">PI</string>
    <string name="activitycalc_string_tab_bai">Body Adiposity Index</string>
    <string name="bai_short">BAI</string>
    <string name="activitycalc_string_tab_bmi">Body Mass Index</string>
    <string name="bmi_short">BMI</string>
    <string name="activitypatients_string_patient_add">Add patient</string>
    <string name="activitypatients_string_patient_search">Look for patient</string>
    <string name="activitypatients_string_patient_nextVisit">Next appointment:</string>
    <string name="activitypatients_string_patient_lastVisit">Last appointment:</string>
    <string name="activityaddpatient_string_details">Add details</string>
    <string name="activityaddpatient_string_nodata_details">Add a patient using the button "+"</string>
    <string name="activityaddpatient_string_survey">1. Questionnaire</string>
    <string name="activityaddpatient_string_name">Name*</string>
    <string name="activityaddpatient_string_surname">Surname*</string>
    <string name="activityaddpatient_string_bdate">Date of birth</string>
    <string name="activityaddpatient_string_age">Age</string>
    <string name="activityaddpatient_string_phone">Phone number*</string>
    <string name="activityaddpatient_string_visitreason">Reason of the visit</string>
    <string name="activityaddpatient_string_weighthistory">Weight history</string>
    <string name="activityaddpatient_string_previousdiets">Have you followed any other diets before?</string>
    <string name="activityaddpatient_string_previouspathologies">Previous or current pathologies?</string>
    <string name="activityaddpatient_string_foodyes">YES FOOD:</string>
    <string name="activityaddpatient_string_foodno">NO FOOD:</string>
    <string name="activityaddpatient_string_hypercholesterolaemia_food_y">whole foods, cereals</string>
    <string name="activityaddpatient_string_hypercholesterolaemia_food_n">molluscs, crustaceans</string>
    <string name="activityaddpatient_string_thyroidism_food_y"></string>
    <string name="activityaddpatient_string_thyroidism_food_n">brassicaceae</string>
    <string name="activityaddpatient_string_diabetes_food_y"></string>
    <string name="activityaddpatient_string_diabetes_food_n"></string>
    <string name="activityaddpatient_string_kidneyslaziness_food_y"></string>
    <string name="activityaddpatient_string_kidneyslaziness_food_n">added salt, all foods containing sodium: preserved in salt, in brine, aged cheeses, sausages, salted, bivalve molluscs,
     common bread, bouillon cube with glutamate etc.</string>
    <string name="activityaddpatient_string_osteoporosis_food_y">milk and dairy products, fish, legumes, citrus fruits, figs, walnuts, hazelnuts, almonds</string>
    <string name="activityaddpatient_string_osteoporosis_food_n"></string>
    <string name="activityaddpatient_string_prostatitis_food_y">foods rich in Omega3: oily fish, shellfish, extra virgin olive oil, carrots, pumpkin, courgettes,
     cabbage, fennel, chicory, turnips, apples and cooked pears</string>
    <string name="activityaddpatient_string_prostatitis_food_n">beer, sausages, spices, pepper, chilli, spirits, coffee, chocolate, fatty cheeses
     , fatty fish (eel, tuna, mackerel), molluscs, seafood, crustaceans (shrimp, lobster)</string>
    <string name="activityaddpatient_string_hereditarypathologies">Hereditary pathologies in the family?</string>
    <string name="activityaddpatient_string_allergies">Allergies?</string>
    <string name="activityaddpatient_string_productsassumption">Taking medications, supplements or herbal products?</string>
    <string name="activityaddpatient_string_intestine">Alvo</string>
    <string name="activityaddpatient_string_intestine_diarrheal">Diarrheal</string>
    <string name="activityaddpatient_string_intestine_diarrheal_tag">1</string>
    <string name="activityaddpatient_string_intestine_constipated">Constipated</string>
    <string name="activityaddpatient_string_intestine_constipated_tag">2</string>
    <string name="activityaddpatient_string_intestine_alternate">Alternate</string>
    <string name="activityaddpatient_string_intestine_alternate_tag">3</string>
    <string name="activityaddpatient_string_intestine_regular">Regular</string>
    <string name="activityaddpatient_string_intestine_regular_tag">4</string>
    <string name="activityaddpatient_string_menstrualcycle">Menstrual cycle</string>
    <string name="activityaddpatient_string_menstrualcycle_regular">Regular</string>
    <string name="activityaddpatient_string_menstrualcycle_regular_tag">1</string>
    <string name="activityaddpatient_string_menstrualcycle_irregular">Irregular</string>
    <string name="activityaddpatient_string_menstrualcycle_irregular_tag">2</string>
    <string name="activityaddpatient_string_menstrualcycle_absent">Absent</string>
    <string name="activityaddpatient_string_menstrualcycle_absent_tag">3</string>
    <string name="activityaddpatient_string_physicalactivity">Physical activity?</string>
    <string name="activityaddpatient_string_workingactivity">Working activity?</string>
    <string name="activityaddpatient_string_subtitle_anamnesis">Food anamnesis</string>
    <string name="activityaddpatient_string_welcomefood">Welcome foods</string>
    <string name="activityaddpatient_string_nonwelcomefood">Non welcome foods</string>
    <string name="activityaddpatient_string_breakfast">Breakfast</string>
    <string name="activityaddpatient_string_nibble">Nibble</string>
    <string name="activityaddpatient_string_lunch">Lunch</string>
    <string name="activityaddpatient_string_snack">Snack</string>
    <string name="activityaddpatient_string_dinner">Dinner</string>
    <string name="activityaddpatient_string_postdinner">Post-dinner</string>
    <string name="activityaddpatient_string_subtitle_foodplanprototype">Food plan prototype</string>
    <string name="activityaddpatient_string_antropometry">2. Antropometry</string>
    <string name="activityaddpatient_string_subtitle_circmufrences">Circumferences</string>
    <string name="weist">Weist</string>
    <string name="belly">Belly</string>
    <string name="hips">Hips</string>
    <string name="leg">Leg</string>
    <string name="arm">Arm</string>
    <string name="activityaddpatient_string_subtitle_pliche">Pliche</string>
    <string name="activityaddpatient_string_bicipital">Bicipital</string>
    <string name="activityaddpatient_string_pectoral">Pectoral</string>
    <string name="activityaddpatient_string_subscapularis">Subscapularis</string>
    <string name="activityaddpatient_string_umbilicale">Umbilical</string>
    <string name="activityaddpatient_string_femoral">Femoral</string>
    <string name="activityaddpatient_string_subtitle_healthindexes">Health indexes</string>
    <string name="activityaddpatient_string_alertTitle_formCheck">Check the completeness of the fields\n</string>
    <string name="activityaddpatient_string_alertMessage_formCheck_name">\n• Please enter a name</string>
    <string name="activityaddpatient_string_alertMessage_formCheck_surname">\n• Please enter a surname</string>
    <string name="activityaddpatient_string_alertMessage_formCheck_phone">\n• Please enter a phone number</string>
    <string name="activityappointments_string_addAppointment">Add appointment</string>
    <string name="activityappointments_string_nodata_details">Add an appointment</string>
    <string name="activityappointments_string_alertMessage_deleteappointment">Confirm the deletion of the appointment?</string>
    <string name="activityappointments_string_alertMessage_blockopening">It is not possible to add an appointment without patients.</string>
    <string name="activityappointments_string_alertMessage_blockediting">It is not possible to edit an appointment of an unregistered patient. Please delete and re-create the appointment with the new information.</string>
    <string name="activityaddappointment_string_addPatient">Patient name</string>
    <string name="activityaddappointment_string_alertMessage_formCheck_name">\n• Select the patient from the list</string>
</resources>