<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.Fragment_Calc_IdealWeight">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_calc_pi_constraintLayout_scale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_calc_pi_form_textView_label_sex"
            style="@style/style_activitycalc_form_label"
            android:text="@string/sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/fragment_calc_pi_radioGroup_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_calc_pi_form_textView_label_sex"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/fragment_calc_pi_radio_female"
                style="@style/style_activitycalc_form_options"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="@string/female_short"
                android:text="@string/female_long" />

            <RadioButton
                android:id="@+id/fragment_calc_pi_radio_male"
                style="@style/style_activitycalc_form_options"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:tag="@string/male_short"
                android:text="@string/male_long" />
        </RadioGroup>

        <TextView
            android:id="@+id/fragment_calc_pi_form_textView_label_height"
            style="@style/style_activitycalc_form_label"
            android:layout_marginTop="24dp"
            android:text="@string/height"
            app:layout_constraintEnd_toEndOf="@+id/fragment_calc_pi_radioGroup_sex"
            app:layout_constraintStart_toStartOf="@+id/fragment_calc_pi_radioGroup_sex"
            app:layout_constraintTop_toBottomOf="@+id/fragment_calc_pi_radioGroup_sex" />

        <EditText
            android:id="@+id/fragment_calc_pi_form_editText_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="@+id/fragment_calc_pi_form_textView_label_height"
            app:layout_constraintStart_toStartOf="@+id/fragment_calc_pi_form_textView_label_height"
            app:layout_constraintTop_toBottomOf="@+id/fragment_calc_pi_form_textView_label_height" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_calc_pi_constraintLayout_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_calc_pi_constraintLayout_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/balance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fragment_calc_pi_constraintLayout_textView_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:gravity="center"
            android:text="@string/activitycalc_string_pi_short"
            android:textColor="@color/dark_grey"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_calc_pi_constraintLayout_textView_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="—"
            android:textAlignment="center"
            android:textColor="#EFEFEF"
            android:textSize="52dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_calc_pi_constraintLayout_textView_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>